updated fetch function

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
    
     async function fetchData() {
-  	const response = await fetch('airtable.js');
+  	const response = await fetch('/api/airtable');
  	const data = await response.json();
   	return data.records;
     }
